force-app/main/default/objects/ProcessEvent__c/ProcessEvent__c.object-meta.xml
<CustomObject>
    <label>Process Event</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Process Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>