force-app/main/default/objects/ProcessEvent__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>