force-app/main/default/objects/ProcessEvent__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>Event Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>