force-app/main/default/objects/ProcessEvent__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <label>Process Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>