force-app/main/default/objects/ProcessEvent__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>